# streamlitchat

./: LICENSE  Makefile  README.md  README.rst  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup_venv.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  authors.rst  conf.py  contributing.rst  deployment.rst  history.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.rst  streamlitchat.rst  usage.rst
docs/requirements/: software_requirements.md
examples/: advanced_chat.py  basic_chat.py
logs/: streamlitchat.log.1  streamlitchat.log.2  streamlitchat.log.3
src/streamlitchat/: __init__.py  app.py  chat_interface.py  cli.py  exceptions.py  logging_config.py  ui.py
test-results/: junit.xml  report.html
tests/: __init__.py  conftest.py  test_chat_interface.py  test_e2e.py  test_examples.py  test_logging.py  test_performance.py  test_streamlitchat.py  test_ui.py
