# Build system configuration
[build-system]
requires = ["setuptools>=61.0"]  # Specifies that we need setuptools version 61.0 or higher to build this project
build-backend = "setuptools.build_meta"  # Tells the build system to use setuptools' build backend

# Project metadata
[project]
name = "StreamlitChat"
version = "0.1.0"
description = "streamlit created chat interface giving api keys"
readme = "README.rst"
authors = [
  {name = "Yang Xiong", email = "yxiong@umich.edu"}
]
maintainers = [
  {name = "Yang Xiong", email = "yxiong@umich.edu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "streamlit>=1.29.0",
    "openai>=1.6.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "psutil>=5.9.0"
]

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "bump2version==1.0.1",
    "wheel==0.41.3",
    "watchdog==3.0.0",
    "tox==4.11.4",
    "coverage==7.3.2",
    "Sphinx==7.1.2",
    "sphinx-rtd-theme==1.3.0",
    "sphinx-autodoc-typehints==1.25.2",
    "twine==4.0.2",
    "ruff==0.1.9",
    "pytest==7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "mypy==1.7.1",
    "coverage==7.3.2",
    "build",
    "psutil>=5.9.0"
]

# Project URLs
[project.urls]
bugs = "https://github.com/supersheepbear/streamlitchat/issues"
changelog = "https://github.com/supersheepbear/streamlitchat/blob/master/changelog.md"
homepage = "https://github.com/supersheepbear/streamlitchat"

# Setuptools configuration
[tool.setuptools]
package-dir = {"" = "src"}  # Tells setuptools that the packages are in the 'src' directory

# Package data configuration
[tool.setuptools.package-data]
"*" = ["*.*"]  # Includes all files in all packages when distributing


# Mypy
# ----

[tool.mypy]
files = "."  # Tells mypy to check all Python files in the current directory and subdirectories

# Use strict defaults
strict = true  # Enables all of mypy's strict checking options
warn_unreachable = true  # Warns about code that mypy thinks can never be reached
warn_no_return = true  # Warns about functions that never explicitly return

[[tool.mypy.overrides]]
# Special settings for test files
module = "tests.*"  # These settings apply to all files in the 'tests' directory
allow_untyped_defs = true  # Allows functions in tests to be defined without type annotations
disable_error_code = "attr-defined"  # Disables warnings about undefined attributes in tests

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.html]
directory = "htmlcov"
